--- a/action.yml
+++ b/action.yml
@@ -14,6 +14,12 @@ inputs:
   image:
     description: 'resulting image'
     required: true
+  image_pull_username:
+    description: "the username to use for pulling the base image"
+    required: true
+  image_pull_password:
+    description: "the password to use for pulling the base image"
+    required: true
 runs:
   using: 'docker'
   image: 'Dockerfile'
@@ -21,3 +27,5 @@ runs:
     - ${{ inputs.path }}
     - ${{ inputs.base }}
     - ${{ inputs.image }}
+    - ${{ inputs.image_pull_username }}
+    - ${{ inputs.image_pull_password }}
